--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ include(Packaging.cmake)
 
 # If we're not a subproject, globally apply our warning flags
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
-  add_compile_options(-Wall -Wextra)
+  add_compile_options(-Wall -Wextra -Wno-error=implicit-function-declaration)
 endif()
 
 # This function can be used to generate a linker map file on an executable target
